--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-h1,h2{
-    background-color: black;
-    color: rgb(3, 119, 221);
-    width: 50%;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin: auto;
-    margin-top: 400px;
+.Rahat{
+    display: flex;
 }
